# protoc-gen-luau

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  foreman.toml  test.luau
.github/workflows/: ci.yml  conformance.yml  release.yml
conformance/: README.md  conformance.py  conformance_test.luau  failing_tests.txt  jsonEncode.luau
conformance/protos/: test_messages_proto3.proto
example/: person.proto
src/: fields.rs  generator.rs  if_builder.rs  luau_tests.rs  main.rs  string_builder.rs  wkt_json.rs
src/luau/: proto.luau  proto.test.luau
src/luau/proto/: base64.luau  init.luau  init.test.luau  message.luau  typeRegistry.luau  type_registry.luau  wktJson.luau  wktJson.test.luau
src/luau/proto/wkt/: duration.luau  field_mask.luau  struct.luau  timestamp.luau  wrappers.luau
src/luau/wkt_mixins/: Any.luau  Any_methods.luau  BytesValue.luau  Duration.luau  FieldMask.luau  ListValue.luau  Struct.luau  Timestamp.luau  Value.luau
src/samples/protos/: conformance.proto  descriptors.proto  descriptors_uses_it.proto  enum_regression.proto  field_case_test.proto  forwards_compatibility.proto  kitchen_sink.proto  many_messages.proto  nested_autowrap.proto  recursive.proto
src/tests/: basic.luau  descriptors_require.luau  field_case.luau  field_case_camel.luau  field_case_snake.luau  invalid_utf8.luau  many_messages.luau  nested_autowrap.luau  tests.luau  wkt_json.luau
src/tests/protos/: include_me.proto  kitchen_sink.proto  no_package.proto  same_package.proto  wkt.proto
src/tests/protos/deeper/: include_me2.proto
