[package]
name = "protoc-gen-luau"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: maybe overkill and not necessary vs plain match
color-eyre = "0.6.2"
heck = "0.4.1"
indoc = "2.0.4"
pathdiff = "0.2.1"
prost = "0.12.3"
prost-types = "0.12.3"
stylua = { version = "0.20.0", default-features = false, features = ["luau"] }
typed-path = "0.8.0"

[profile.dev.package.stylua]
opt-level = 3

[dev-dependencies]
# CLI not actually required, bug from https://github.com/lune-org/lune/issues/174
lune = { version = "0.8.3", default_features = false, features = ["cli"] }
protox = "0.6.0"
tokio = { version = "1.37.0", features = ["test-util"] }
