[package]
name = "protoc-gen-luau"
description = "A protobuf generator for Luau"
version = "1.0.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
# TODO: maybe overkill and not necessary vs plain match
color-eyre = "0.6.2"
heck = "0.4.1"
indoc = "2.0.4"
pathdiff = "0.2.1"
prost = "0.12.3"
prost-types = "0.12.3"
rayon = "1.8.0"
stylua = { version = "0.20.0", default-features = false, features = ["luau"] }
typed-path = "0.8.0"

[profile.dev.package.stylua]
opt-level = 3

[dev-dependencies]
lune = { version = "0.10.1", default-features = false, features = ["std"] }
protox = "0.6.0"
tokio = { version = "1.47.1", features = ["macros", "rt", "test-util"] }

futures-util = "0.3.31" # Unused, fixes a bug brought from one of lune's dependencies
